--- a/index.html
+++ b/index.html
@@ -9,29 +9,52 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+    <link rel="icon" href="./imagens/donutsicon.png">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
 
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-    <title>Document</title>
+    <title>O Tradicionalíssimo</title>
 </head>
 
 <body>
-    <nav><img src="./imagens/logo_01.png.webp" alt="">
-        <ul>
-            <li>Localização</li>
-            <li>Quem Somos</li>
-            <li>Serviços</li>
-            <li>Parceiros</li>
-            <li>Contatos</li>
+    <nav>
+        <img src="./imagens/logo_01.png.webp" alt="">
+        <img class="icone-drop" width="10" height="10" src="./imagens/menu.png" alt="">
+        <ul class="navul">
+            <li><a href="#localizacao">Localização</a></li>
+            <li><a href="#quemsomos">Quem Somos</a></li>
+            <li><a href="#servicos">Serviços</a></li>
+            <li><a href="#parceiros">Parceiros</a></li>
+            <li><a href="#contatos">Contatos</a></li>
         </ul>
     </nav>
 
+    <nav class="nav2 hide" id="nav-aside">
+        <ul>
+            <li><a href="#localizacao">Localização</a></li>
+            <li><a href="#quemsomos">Quem Somos</a></li>
+            <li><a href="#servicos">Serviços</a></li>
+            <li><a href="#parceiros">Parceiros</a></li>
+            <li><a href="#contatos">Contatos</a></li>
+        </ul>
+    </nav>
+    <!-- 
     <div class="home">
-        <!-- <img class="fundohome" src="./imagens/1312821.webp" alt=""> -->
+        <img class="fundohome" src="./imagens/1312821.webp" alt="">
         <div class="retangulo">
-            <h2>Bem-vindos ao</h2>
-            <h1>Tradicionalíssimo</h1>
+            <h1>Bem-vindo ao</h1>
+            <h2>Tradicionalíssimo</h2>
+        </div>
+
+        <img class="home1" src="./imagens/216780029_4638666239496580_5669327263521250065_n.jpg" alt="">
+
+    </div> -->
+
+    <div class="home">
+
+        <div class="retangulo">
+            <h1>Bem-vindo ao</h1>
+            <h2>Tradicionalíssimo</h2>
         </div>
 
         <img class="home1" src="./imagens/216780029_4638666239496580_5669327263521250065_n.jpg" alt="">
@@ -39,6 +62,173 @@
     </div>
 
 
+    <div class="containerloc" id="localizacao">
+        <div class="loc">
+            <div class="retanguloloc">
+                <h1>Localização</h1>
+                <p>Estamos localizados na Rua Luís Góis, 810 - Vila da Saúde <br> São Paulo</p>
+
+                <p class="maps"><a
+                        href="https://www.google.com/search?tbs=lf:1,lf_ui:9&tbm=lcl&sxsrf=ALiCzsY2F0fJTBYFDM5yydCtLwaz0PKnOA:1666141071331&q=tradicional%C3%ADssimo+donuts&rflfq=1&num=10&sa=X&ved=2ahUKEwiG586Vi-v6AhX-qJUCHaOVCSsQjGp6BAgUEAE&biw=1920&bih=937&dpr=1#rlfi=hd:;si:2730452520694207124,l,Chl0cmFkaWNpb25hbMOtc3NpbW8gZG9udXRzSMf2vZPnsICACFojEAAQARgAGAEiGXRyYWRpY2lvbmFsw61zc2ltbyBkb251dHOSAQpkb251dF9zaG9wqgEYCggvbS8wank0axABKgoiBmRvbnV0cygM,y,vE-3OPBin4k;mv:[[-23.337911135431895,-46.17552486914063],[-23.830016381083126,-47.20549313085938],null,[-23.584194404848866,-46.690509000000006],11]"
+                        target="_blank">Google Maps</a></p>
+
+            </div>
+
+            <div>
+                <img src="./imagens/Captura de tela 2022-10-18 214923.png" alt="">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="containerquem" id="quemsomos">
+        <div class="quemsomos">
+
+            <div class="retanguloquemsomos">
+                <h1>Quem Somos</h1>
+                <p>Somos uma empresa criada em 2016, com o intuito de levar a melhor experiência gastronômica possível,
+                    com
+                    produtos de qualidade, serviço incrível e ambiente envolvente</p>
+            </div>
+            <div class="imgquemsomos">
+                <img src="./imagens/o-tradicionalissimo_03.jpg" alt="">
+                <img src="./imagens/o-tradicionalissimo_08.jpg" alt="">
+                <img src="./imagens/o-tradicionalissimo_12.jpg" alt="">
+                <img src="./imagens/o-tradicionalissimo_15.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="containerservicos" id="servicos">
+        <div class="servicos">
+            <div>
+                <h1>Serviços</h1>
+                <p>Refeição no local · Refeição para viagem</p>
+            </div>
+
+            <div class="servicosimg">
+                <img src="./imagens/donut_ouro-branco_04.png" alt="">
+                <img src="./imagens/donut_sonho-de-valsa_03.png" alt="">
+                <img src="./imagens/o-tradicionalissimo_donut_the-simpson_04.png.webp" alt="">
+                <img src="./imagens/o-tradicionalissimo_donut_tradicional_03.png.webp" alt="">
+            </div>
+
+        </div>
+    </div>
+
+
+    <div class="containerparceiros" id="parceiros">
+        <div class="parceiros">
+            <h1>Parceiros</h1>
+            <div class="retangulocarrossel">
+                <div class="carrossel">
+                    <h1><img src="./imagens/cocacolalogo-removebg-preview.png" class="cocacola" alt=""></h1>
+                    <h1><img src="./imagens/png-transparent-facebook-icon-logo-blue-square-symbol-social-facebook-blue-rectangle-logo-thumbnail-removebg-preview.png"
+                            alt=""></h1>
+                    <h1><img src="./imagens/Instagram_icon.png.webp" alt=""></h1>
+                    <h1><img src="./imagens/kisspng-monster-energy-logo-label-brand-font-logo-monster-5b515ac9338c06.6382349215320583132112-removebg-preview.png"
+                            alt=""></h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="containercontato" id="contatos">
+        <div class="contato">
+
+            <h1>Fale Conosco</h1>
+
+            <div class="formulario">
+                <h2>Nome</h2>
+                <input type="text">
+                <h2>Telefone</h2>
+                <input type="text">
+                <h2>E-mail</h2>
+                <input type="text">
+                <h2>Assunto</h2>
+                <input type="text">
+
+
+                <h2>Mensagem</h2>
+                <textarea></textarea>
+            </div>
+
+            <div class="submit">
+                <input type="submit">
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="containerapp">
+        <div class="app">
+            <h2 style="color:#ffcf52">Baixe nosso app:</h2>
+            <a href="https://play.google.com/store/apps/details?id=otradicionalissimo.delivery" target="_blank"><img
+                    src="./imagens/pt-br_badge_web_generic.png" alt=""></a>
+
+        </div>
+    </div>
+
+    <div class="containerrodape">
+        <div class="rodape">
+            <h3>ProSEmpre BETA - EJECT © 2022.2</h3>
+        </div>
+    </div>
+
+
+
+    <script type="text/javascript" src="script.js"></script>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('.carrossel').slick({
+                dots: false,
+                infinite: true,
+                speed: 300,
+                slidesToShow: 3,
+                slidesToScroll: 1,
+                autoplay: true,
+                responsive: [
+                    {
+                        breakpoint: 1024,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1,
+                            infinite: true,
+                            dots: false,
+                            arrows: false,
+
+                        }
+                    },
+                    {
+                        breakpoint: 800,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1,
+                            arrows: false,
+                        }
+                    },
+                    {
+                        breakpoint: 480,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1,
+                            arrows: false,
+                        }
+                    }
+
+                ]
+            });
+        });
+
+    </script>
 </body>
 
 </html>
